# saneyaml

./: .gitattributes  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  MIGRATION.md  PUBLIC_API.txt  README.md  RELEASE_NOTES.md  SECURITY.md  book.toml  deny.toml
.github/: pull_request_template.md
docs/: ARCHITECTURE.md  BENCHMARKS.md  CODE_REVIEW_DISPOSITION.md  COMPATIBILITY.md  (+15 more)
fuzz/: Cargo.toml
fuzz/corpus/apply_merge/: apply-merge-block-style  apply-merge-list  apply-merge-nested-list  apply-merge-non-string-key-override  apply-merge-quoted-key  apply-merge-scalar-error  apply-merge-sequence-element-error  apply-merge-sequence-element-sequence-error  apply-merge-sequence-recursive  apply-merge-single  apply-merge-tagged-container-recursion  apply-merge-tagged-error  apply-merge-tagged-key-literal  apply-merge-target-override  docker-compose-merge-anchors
fuzz/corpus/config_editor/: compose-chain  flow-mapping-set-sequence  kubernetes-json-pointer  multi-doc-rename  no-trailing-newline-push
fuzz/corpus/emit_roundtrip/: ambiguous-scalars  anchors-and-aliases  block-scalars  complex-key-block-scalar  complex-keys  default-merge  explicit-core-tags  github-actions-anchors  helm-block-merge  openapi-flow-tags  simple-config  tagged-flow  tagged-flow-non-specific  yaml11-directive-tags-merge
fuzz/corpus/event_stream/: alias-expansion-bomb  alias-recursive-flow  alias-undefined  anchor-alias-acyclic  block-alias-scalar-keys  directive-unknown  directive-yaml-12  docker-compose-anchors  docker-compose-polymorphic  document-start-root-metadata  double-quoted-even-backslash-fold  flow-anchor-only-null-nodes  flow-colon-anchor-alias  flow-key-anchor-scalar  flow-key-anchor-sequence  flow-key-distinct-aliases  helm-chart-metadata  malformed-block-scalar-header-root  multi-doc-explicit-markers  reduced-duplicate-mapping-key  tagged-duplicate-scalar-key  tagged-duplicate-sequence-key  tags-styles-anchors  yts-8g76-comment-lines
fuzz/corpus/lossless_edit/: delete-compose-root-source  insert-compose-label  insert-directive-document-comment  insert-document-comment  replace-compose-root-source  replace-flow-mapping  replace-flow-sequence  replace-flow-service-map  replace-real-world-block-scalar  replace-scalar  replace-tagged-block-scalar  source-multi-doc-merge-replace  structural-flow-map-delete  structural-flow-map-insert  structural-flow-openapi-seq-insert  structural-flow-sequence-delete  structural-flow-sequence-insert  structural-map-delete  structural-map-duplicate-key  structural-map-insert  structural-map-invalid-insert  structural-map-merge-comment-insert  structural-map-replace  structural-sequence-append-no-newline  structural-sequence-delete  structural-sequence-flow-replace  structural-sequence-insert  structural-sequence-replace
fuzz/corpus/lossless_graph/: anchor_redefinition.yml  comments_anchor.yml  comments_block_scalars_merge.yml  directives_merge.yml  document_reset_anchor.yml  explicit_core_tags.yml  github_actions_comments_markers.yml  helm_block_scalar_merge.yml  merge_list_aliases.yml  multi_doc_directives_comments.yml  multi_doc_merge_anchor_reset.yml  openapi_flow_anchor_tags.yml  recursive_alias.yml  tag_directive_non_specific_alias.yml  tagged_collection_alias.yml  yaml11_anchor_redefinition_comments.yml  yaml11_collection_tags.yml  yaml11_explicit_merge_tags.yml  yaml11_recursive_merge_comments.yml
fuzz/corpus/parse_bytes/: alias-expansion-chain  alias-recursive-block  depth-boundary-flow-over  docker-compose-platform-resources  emitter-colon-tab-string  emitter-doc-marker-prefix-string  emitter-tab-comment-string  flow-key-alias-scalar  flow-key-string-bracket  flow-key-tag-handle  issue-13-block-scalar-u0085-byte-boundary  mapping-key-anchor  quoted-special-float-strings  root-block-scalar-string  root-directive-like-string  signed-zero-duplicate-keys  special-floats  tag-anchor-block-value-anchor-before-tag  tag-anchor-flow-value  tag-handle-greater-than-suffix  verbatim-tag-bang-suffix  verbatim-tag-leading-bang-suffix  verbatim-tag-leading-less-than  verbatim-tag-trailing-colon  yaml-double-quoted-escapes
fuzz/corpus/schema_modes/: canonical-core-tags  explicit-core-tags  yaml11-booleans  yaml11-collection-tags  yaml11-directive-default-safe  yaml11-directive-driven  yaml11-directive-migration-pack  yaml11-duplicate-keys  yaml11-explicit-merge-tags  yaml11-numerics  yaml11-pairs-scalar-entry  yaml11-timestamps  yaml12-config-words
fuzz/corpus/serde_entrypoints/: alias-recursive-flow  alias-undefined  anchor-alias-acyclic  borrowed-alias-input  borrowed-flow-source-backed  borrowed-multiline-plain-nonborrow  borrowed-non-ascii  borrowed-source-backed-scalars  borrowed-tagged-input  borrowed-transformed-scalars  direct-deserializer-borrowed-plain  direct-deserializer-borrowed-simple-quoted  direct-stream-prior-borrowed-later-error  directive-tag-handle  issue-13-block-scalar-nbsp-byte-boundary  large-integer-widths  malformed-block-scalar-header-key  malformed-block-scalar-header-sequence  null-like-string-map  parser-byte-binary-tag  reduced-duplicate-sequence-key  stream-prior-doc-later-alias-error  tag-anchor-block-key-alias  tag-anchor-block-mapping-value  tag-anchor-block-sequence-value  tag-anchor-block-value-tag-before-anchor  tag-anchor-core-float-value  tag-anchor-core-int-value  tag-anchor-directive-handle-value  tagged-duplicate-mapping-key  tagged-transparent-config  tagged-values  yaml11-omap-non-singleton-entry  yaml11-scalar-denominator
fuzz/corpus/serde_serializer/: bytes-rejection  document-stream  enum-helper-shape  kubernetes-resource  nested-options  openapi-shape  struct-config
fuzz/corpus/streaming_parse/: alias-budget-bomb  directive-boundary  empty-doc-stream  flow-prefix-error  prior-doc-later-alias-error
fuzz/fuzz_targets/: apply_merge.rs  config_editor.rs  emit_roundtrip.rs  event_stream.rs  lossless_edit.rs  lossless_graph.rs  parse_bytes.rs  schema_modes.rs  serde_entrypoints.rs  serde_serializer.rs  streaming_parse.rs
(+219 files in other folders)
