[package]
name = "saneyaml"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
description = "Pure-Rust YAML parser, emitter, and Serde compatibility layer for developer configuration files."
readme = "README.md"
license = "MIT"
repository = "https://github.com/jskoiz/saneyaml"
keywords = ["yaml", "serde", "parser", "configuration"]
categories = ["config", "encoding", "parser-implementations"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/README.md",
    "/docs/assets/saneyaml-overview.png",
    "/docs/assets/saneyaml-overview.md",
    "/docs/ARCHITECTURE.md",
    "/LICENSE.md",
    "/docs/BENCHMARKS.md",
    "/CHANGELOG.md",
    "/docs/COMPATIBILITY.md",
    "/CONTRIBUTING.md",
    "/docs/MIGRATION.md",
    "/docs/PUBLIC_API.txt",
    "/SECURITY.md",
    "/examples/config_refactor.rs",
    "/examples/serde_yaml_migration.rs",
    "/src/**",
]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "saneyaml"
path = "src/lib.rs"

[features]
default = ["serde", "emit", "lossless"]
serde = []
emit = []
lossless = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[dependencies]
ryu = "1.0"
serde = "1.0"

[dev-dependencies]
proptest = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
saphyr = "0.0.6"
saphyr-parser = "0.0.6"
sha2 = "0.10"
toml = "0.8"
yaml-rust2 = "0.11.0"
dhat = "0.3.3"
