[package]
name = "yaml-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1", features = ["derive"] }
yaml = { path = ".." }

[[bin]]
name = "parse_bytes"
path = "fuzz_targets/parse_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "serde_entrypoints"
path = "fuzz_targets/serde_entrypoints.rs"
test = false
doc = false
bench = false

[[bin]]
name = "event_stream"
path = "fuzz_targets/event_stream.rs"
test = false
doc = false
bench = false

[[bin]]
name = "apply_merge"
path = "fuzz_targets/apply_merge.rs"
test = false
doc = false
bench = false
